# IveroSLAM-edge2_rgbd

./: .gitignore  CMakeLists.txt  README.md  install.sh
include/: Atlas.h  Config.h  Converter.h  Frame.h  FrameDrawer.h  G2oTypes.h  GeometricTools.h  ImuTypes.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  MLPnPsolver.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  SerializationUtils.h  Settings.h  Sim3Solver.h  System.h  Tracking.h  TwoViewReconstruction.h  Viewer.h
include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
scripts/: extract_realsense_bag.py  get_rgb_kf_trajectory.py  interpolate_poses.py  transform_trajectory.py
src/: Atlas.cc  Config.cc  Converter.cc  Frame.cc  FrameDrawer.cc  G2oTypes.cc  GeometricTools.cc  ImuTypes.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  MLPnPsolver.cpp  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  OptimizableTypes.cpp  Optimizer.cc  Settings.cc  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer.cc
src/CameraModels/: KannalaBrandt8.cpp  Pinhole.cpp
tools/Ivero/: create_config_file.cc  ivero_slam_offline_rgbd.cc  ivero_slam_offline_rgbd_dual.cc  ivero_slam_offline_rsbag.cc  ivero_slam_offline_stereo.cc  utils.h
